fix: move overflow-hidden css from global into UIDemo

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --text-color: #FFF;
+  --text-color: #fff;
   --background-color: #000;
 }
 
@@ -11,5 +11,4 @@ body {
   color: var(--text-color);
   background: var(--background-color);
   height: 100%;
-  overflow: hidden;
 }
